<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <TextView
        android:id="@+id/tvRouteInstructionTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center_horizontal"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:visibility="gone"
        android:text="@string/main_route_instruction_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvRouteInstruction"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center_horizontal"
        android:letterSpacing="0.2"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvRouteInstructionTitle"
        tools:text="EWEWEW" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayoutCommand"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etCommandInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/main_command_hint"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLines="1"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvCommandHint"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/main_command_sample"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@id/inputLayoutCommand"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnBuildRoute"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:enabled="false"
        android:text="@string/main_build_route"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@id/tvCommandHint"
        app:layout_constraintEnd_toStartOf="@id/btnApplyCommand"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnApplyCommand"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/main_apply_command"
        android:textSize="12sp"
        app:autoSizeMaxTextSize="12sp"
        app:autoSizeMinTextSize="10sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="@id/btnBuildRoute"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnBuildRoute"
        app:layout_constraintTop_toTopOf="@id/btnBuildRoute" />

    <TextView
        android:id="@+id/tvPizzaDeliverCount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:gravity="start"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        app:layout_constraintBottom_toTopOf="@id/btnBuildRoute"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/btnBuildRoute"
        tools:text="1 pizza to deliver" />

</androidx.constraintlayout.widget.ConstraintLayout>